Fixed bug #8504: help icon is not aligned in TCEform (Thanks to Steffen Kamper)
git-svn-id: https://svn.typo3.org/TYPO3v4/Core/trunk@3730 709f56b5-9817-0410-a4d7-c38de5d9e867

--- a/typo3/sysext/t3skin/stylesheets/typo3-TCEforms.css
+++ b/typo3/sysext/t3skin/stylesheets/typo3-TCEforms.css
@@ -203,3 +203,12 @@ TABLE.typo3-TCEforms td.icons {
 TABLE.typo3-TCEforms td.thumbnails {
 	padding-top: 6px;
 }
+
+.typo3-TCEforms-palette .typo3-csh-link IMG {
+	padding-top: 3px;
+	vertical-align: top;
+}
+
+.typo3-TCEforms-palette SELECT.select {
+	margin-top: 2px;
+}
